--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :  University College London
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=s9IOtoMAAAAJ&hl=en"
-  email            :
+  email            : yunda.yan@ucl.ac.uk
   researchgate     : "https://www.researchgate.net/profile/Yunda-Yan"
   uri              :
   bitbucket        :
