--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yunda Yan / Personal Page"
 title_separator          : "-"
 name                     : &name "Yunda Yan"
-description              : &description "Lecturer in Robotics and AI"
+description              : &description "Personal Page"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
